--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,17 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules and build output
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment files
+.env
+.env.local
+.env.production
+.env.development
 
 # Editor directories and files
 .vscode/*
