--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
-          fetch-depth: 0  
+          fetch-depth: 0
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -41,4 +41,4 @@ jobs:
 
       - name: Push to 'build' branch
         run: |
-          git push origin build --force
+          git push --force-with-lease origin build
